scrollbar fix

--- a/src/sass/editor/editor.sass
+++ b/src/sass/editor/editor.sass
@@ -45,7 +45,7 @@
 	position: absolute
 	cursor: pointer
 	z-index: 100000000
-	background-color: $blue
+	background-color: $darkgrey
 	&.--vertical
 		height: 100%
 		width: 10px
