--- a/src/sass/editor/editorMirror.sass
+++ b/src/sass/editor/editorMirror.sass
@@ -3,21 +3,16 @@
 @import '../show-hint.css'
 @import '../lucario.css'
 @import '../lint.css'
+@import '../simplescrollbars.css'
 
-.CodeMirror
-	width: 100%
-	height: 100%
-	
-.CodeMirror-scroll
-	width: 100%
-	height: 100%
-	outline: none
-	resize: none
-	overflow: auto
-	padding: 0
-	margin: 0
+//Size of Codemirror is set in JS 
+
 .CodeMirror-sizer
 	min-height: 100px !important
 	height: 100px !important
 	min-width: 100px
 	width: 100px
+
+
+.CodeMirror-scrollbar-filler
+	background: $blue
